# bozorth3-cpp

./: .gitmodules  Bozorth3.sln  Bz3.vcxproj  Bz3.vcxproj.filters  CMakeLists.txt
src/: ThreadPool.h  bench.cpp  bz3.cpp  bz_io.c  utils.cpp  utils.h
src/bozorth3/: bozorth3.cpp  bozorth3.h  constants.h  math.h  pair_holder.cpp  pair_holder.h  types.h  utils.hpp
